--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,21 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@100..800&display=swap');
 
+
+.card-hover {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card-hover:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
+}
+
+
+
+
+
+
 :root {
   --tp-ff-body: 'Anek Malayalam', serif;
   --tp-ff-heading: 'Anek Malayalam', serif;
@@ -615,6 +630,7 @@ input[type=color] {
   -ms-border-radius: 6px;
   border-radius: 6px;
   background-image: var(--tp-theme-3);
+  padding: 10px;
 }
 
 .tp-btn-8 {
